--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "angular-day-one",
+  "jest": {
+    "verbose": true,
+    "preset": "ts-jest"
+  },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/jest": "^24.0.13",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5"
+  }
 }
